# OpenPano

./: .clang_complete  .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  TODO  cmake_install.cmake  color.cc  config.cc  config.cfg  cylinder.cc  debugutils.cc  filter.cc  gallery.cc  image.cc  keypoint.cc  main.cc  matcher.cc  matrix.cc  panorama.cc  planedrawer.cc  sift.cc  stitcher.cc  transformer.cc  utils.cc
.github/: ISSUE_TEMPLATE.md
.github/workflows/: unittest.yml
include/: color.hh  common.hh  config.hh  cylinder.hh  feature.hh  filter.hh  gallery.hh  geometry.hh  image.hh  keypoint.hh  matcher.hh  matrix.hh  panorama.hh  planedrawer.hh  sift.hh  sphere.hh  stitcher.hh  transformer.hh  utils.hh  warper.hh
include/render/: MImageRender.hh  filerender.hh  matrixrender.hh  render.hh
report/: 1.tex  Makefile  algo.tex  cylinder.tex  feature.tex  general.tex  intro.tex  mint-defs.tex  refs.bib  report.tex  result.tex  title.tex  transform.tex
report/res/: results
src/: .ycm_extra_conf.py  CMakeLists.txt  Makefile  TODO  cmake_install.cmake  config.cc  config.cfg  cylinder.cc  cylinder.hh  debugutils.cc  env.sh  filter.cc  filter.hh  gallery.hh  image.cc  keypoint.cc  keypoint.hh  main.cc  matcher.cc  matcher.hh  memusg  openpano-config.cmake  openpano.cc  openpano.h  panorama.cc  panorama.hh  plot-point.py  run_test.py  sift.cc  sift.hh  stitcher.cc  transformer.cc  transformer.hh  utils.cc  warper.hh
src/MSVC/: vs.h
src/common/: common.hh
src/feature/: brief.cc  brief.hh  dist.cc  dist.hh  dog.cc  dog.hh  extrema.cc  extrema.hh  feature.cc  feature.hh  filter.cc  filter.hh  gaussian.cc  gaussian.hh  keypoint.cc  keypoint.hh  matcher.cc  matcher.hh  orientation.cc  orientation.hh  sift.cc  sift.hh
src/include/: color.hh  config.hh  debugutils.hh  feature.hh  filter.hh  gallery.hh  geometry.hh  image.hh  matrix.hh  panorama.hh  planedrawer.hh  warper.hh
src/include/render/: MImageRender.hh  filerender.hh  render.hh
src/lib/: color.cc  color.hh  common.hh  config.cc  config.hh  debugutils.cc  debugutils.hh  geometry.hh  image.cc  image.hh  imgio.cc  imgproc.cc  imgproc.hh  kdtree.cc  kdtree.hh  mat.cc  mat.h  matrix.cc  matrix.hh  planedrawer.cc  planedrawer.hh  polygon.cc  polygon.hh  timer.cc  timer.hh  utils.cc  utils.hh
src/python/: pybind.cc
src/render/: filerender.hh  render.hh
src/stitch/: ba_common.hh  blender.cc  blender.hh  bundle_adjuster.cc  bundle_adjuster.hh  camera.cc  camera.hh  camera_estimator.cc  camera_estimator.hh  cylinder.cc  cylinder.hh  cylstitcher.cc  cylstitcher.hh  debug.cc  homography.cc  homography.hh  imagemeta.hh  imageref.hh  incremental_bundle_adjuster.cc  incremental_bundle_adjuster.hh  match_info.hh  multiband.cc  multiband.hh  projection.hh  stitcher.cc  stitcher.hh  stitcher_image.cc  stitcher_image.hh  stitcherbase.cc  stitcherbase.hh  transform.cc  transform.hh  transform_estimate.cc  transform_estimate.hh  transformer.cc  transformer.hh  warp.cc  warp.hh  warper.hh
